--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       line-height: 1.5;
     }
     
+    h4 {
+        color: #f06292;
+        margin-top: 0;
+    }
     .birthday-img {
       margin-top: 40px;
       width: 100%;
@@ -75,9 +79,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Happy Birthday!</h1>
-    <p>Wishing you a day filled with love, joy, and wonderful memories.</p>
-    <img class="birthday-img" src="birthday.jpg" alt="Birthday Celebration">
+    <h1>Не делай да МАГААААААА!</h1>
+    <p>Dear brother, on your special day, I want to take a moment to celebrate the incredible person you are. Happy birthday! May this year be filled with joy, laughter, and wonderful memories. Thank you for being not only a brother but also a trusted friend. You have always been there for me, offering support, guidance, and unconditional love. Today, I wish you all the happiness and success in the world. May your dreams come true and may each day bring you closer to your goals. Cheers to another year of adventures and shared moments together. Happy birthday, dear brother! With love and warmest wishes.</p>
+    <h4>FROM : RAULLEXE</h4>
+    <img class="birthday-img" src="WhatsApp Image 2023-06-06 at 6.38.58 PM.jpeg" alt="FROM : RAULLEXE">
 
     </form>
   </div>
